0.1.0
  - is a complete redesign (again)
  - chainable

0.0.5
  - draftsPath option (allows to create a draft)
  - publishKey option (allows to hold back unpublished documents from compilation)

0.0.4
  - compile option: filenamePrefix allows
    /destination/<filenamePrefix>/filename.htm
  - dependencies option (in .settings.js)
  - after action (in <filename>.controller.js)