@@ -45,8 +45,9 @@ module.exports = function render( Carver ){
         if( _.keys(compiler.constructor.engines).length < 1 )
           return resolve( content );
 
-        if( compiler.options.locals.doc && lang )
-          compiler.options.locals.doc.curLang = lang;
+        if( compiler.options.doc && lang )
+          compiler.options.doc.curLang = lang;
+
         // if no cwd has been set up, and only one engine is
         // present or an engine has been defined, run and return
         if( typeof(compiler._useEngine) === 'object' )
