@@ -110,11 +110,17 @@ module.exports = function Writers( Carver ){
     if( renderLangs.length < 1 || compiler.options.langlessCopy )
       renderLangs.push( undefined );
 
-    var allWrittenPromise = RSVP.all( renderLangs.map( function(lang){ return compiler.contentLangWriter( lang ); }) );
+
+    var allWrittenPromise = new RSVP.Promise( function(resolve){ resolve(); });
+    renderLangs.forEach( function(lang){ 
+      allWrittenPromise = allWrittenPromise.then( function(){ return compiler.contentLangWriter( lang ); });
+    });
+
     allWrittenPromise.then( function(){
       if( !compiler._skipDependencies )
         return compiler.runDependencies(); 
     });
+
     return allWrittenPromise;
 
   };
@@ -130,11 +136,10 @@ module.exports = function Writers( Carver ){
   Carver.prototype.contentLangWriter = function contentLangWriter( lang ){
 
     var compiler = this;
-    compiler.options.lang = lang; // <-- that one does not work
+    compiler.options.lang = lang;
 
     var promiseChain = new RSVP.Promise( function(resolve){ resolve(); } );
 
-    // promiseChain = promiseChain.then( readInTemplateFile );
     promiseChain = promiseChain.then( renderTemplateFile );
     promiseChain = promiseChain.then( attachPreprocessors );
     promiseChain = promiseChain.then( writeToDrafts );
@@ -178,8 +183,6 @@ module.exports = function Writers( Carver ){
 
         if( compiler.options.doc && !options.draft && compiler.options.doc[compiler.options.publishingStatusKey] !== 'published' )
           return resolve();
-
-        compiler.options.lang = lang; // <-- strange, why I had to put this in here, not on top of promise builder
 
         var writerUrl = url.parse( destination );
         if( _.isEmpty(writerUrl.protocol) )
