@@ -34,7 +34,7 @@ module.exports.init = function( cb ){
     deleteDirRecursive( join( __dirname, 'support/public' ) );
     mkdirp.sync( path );
     fs.writeFileSync( join( path, 'README.txt'), 'THIS FILE SHOULD NOT AFFECT rocksol compiler in any way');
-    fs.writeFileSync( join( path, template+'.hooks.js'), 'module.exports["before.render"] = function( content, compiler, resolve ){ resolve("p hook file content"); };');
+    fs.writeFileSync( join( path, template+'.hooks.js'), 'module.exports["before.render"] = function( content, compiler, resolve ){ resolve(content); };');
     fs.writeFileSync( join( path, template+'.jade'), 'h1 Heading');
   };
 
